// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`News ticker Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--newspaper ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--newspaper"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis.
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--globe ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--globe"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-link--icon ecl-news-ticker__slide-text"
                href="/example"
              >
                <span
                  aria-hidden="false"
                  class="wt-icon-phosphor--arrow-square-out ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon-phosphor--arrow-square-out"
                  role="img"
                  title="Link to an external domain"
                />
                <span
                  class="ecl-link__label"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis. Nam condimentum aliquam sem, a bibendum mauris faucibus id. In euismod semper ex et tincidunt. Donec eu augue posuere, feugiat enim ac, faucibus tortor.
                </span>
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--info ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--info"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--currency-eur"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--broadcast ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--broadcast"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <span
                class="ecl-news-ticker__slide-text"
              >
                
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            
              </span>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--newspaper ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--newspaper"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
              </a>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <div
        class="ecl-news-ticker__actions"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__prev ecl-button--icon-only"
          data-ecl-news-ticker-prev=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Previous item
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--caret-left ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--caret-left"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__play ecl-button--icon-only"
          data-ecl-news-ticker-play=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Play news ticker
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--play-circle ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--play-circle"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__pause ecl-button--icon-only"
          data-ecl-news-ticker-pause=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Pause news ticker
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--pause-circle ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--pause-circle"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__next ecl-button--icon-only"
          data-ecl-news-ticker-next=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Next item
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--caret-right ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--caret-right"
              data-ecl-icon=""
            />
          </span>
        </button>
      </div>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--newspaper ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--newspaper"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis.
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--globe ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--globe"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-link--icon ecl-news-ticker__slide-text"
                href="/example"
              >
                <span
                  aria-hidden="false"
                  class="wt-icon-phosphor--arrow-square-out ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon-phosphor--arrow-square-out"
                  role="img"
                  title="Link to an external domain"
                />
                <span
                  class="ecl-link__label"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis. Nam condimentum aliquam sem, a bibendum mauris faucibus id. In euismod semper ex et tincidunt. Donec eu augue posuere, feugiat enim ac, faucibus tortor.
                </span>
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--info ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--info"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--currency-eur"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--broadcast ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--broadcast"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <span
                class="ecl-news-ticker__slide-text"
              >
                
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            
              </span>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--newspaper ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--newspaper"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
              </a>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <div
        class="ecl-news-ticker__actions"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__prev ecl-button--icon-only"
          data-ecl-news-ticker-prev=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Previous item
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--caret-left ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--caret-left"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__play ecl-button--icon-only"
          data-ecl-news-ticker-play=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Play news ticker
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--play-circle ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--play-circle"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__pause ecl-button--icon-only"
          data-ecl-news-ticker-pause=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Pause news ticker
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--pause-circle ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--pause-circle"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__next ecl-button--icon-only"
          data-ecl-news-ticker-next=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Next item
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--caret-right ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--caret-right"
              data-ecl-icon=""
            />
          </span>
        </button>
      </div>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-news-ticker custom-class custom-class--test"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--newspaper ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--newspaper"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis.
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--globe ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--globe"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-link--icon ecl-news-ticker__slide-text"
                href="/example"
              >
                <span
                  aria-hidden="false"
                  class="wt-icon-phosphor--arrow-square-out ecl-icon ecl-icon--2xs ecl-link__icon ecl-icon-phosphor--arrow-square-out"
                  role="img"
                  title="Link to an external domain"
                />
                <span
                  class="ecl-link__label"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis. Nam condimentum aliquam sem, a bibendum mauris faucibus id. In euismod semper ex et tincidunt. Donec eu augue posuere, feugiat enim ac, faucibus tortor.
                </span>
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--info ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--info"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--currency-eur ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--currency-eur"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
              </a>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--broadcast ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--broadcast"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <span
                class="ecl-news-ticker__slide-text"
              >
                
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            
              </span>
            </div>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <div
              class="ecl-news-ticker__slide-icon"
            >
              <span
                aria-hidden="true"
                class="wt-icon-phosphor--newspaper ecl-icon ecl-icon--l ecl-news-ticker__icon ecl-icon-phosphor--newspaper"
              />
            </div>
            <div
              class="ecl-news-ticker__slide-content"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-link--brand ecl-news-ticker__slide-text"
                href="/example"
              >
                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
              </a>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <div
        class="ecl-news-ticker__actions"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__prev ecl-button--icon-only"
          data-ecl-news-ticker-prev=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Previous item
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--caret-left ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--caret-left"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__play ecl-button--icon-only"
          data-ecl-news-ticker-play=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Play news ticker
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--play-circle ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--play-circle"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__pause ecl-button--icon-only"
          data-ecl-news-ticker-pause=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Pause news ticker
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--pause-circle ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--pause-circle"
              data-ecl-icon=""
            />
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-news-ticker__next ecl-button--icon-only"
          data-ecl-news-ticker-next=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Next item
            </span>
            <span
              aria-hidden="true"
              class="wt-icon-phosphor--caret-right ecl-icon ecl-icon--m ecl-button__icon ecl-icon-phosphor--caret-right"
              data-ecl-icon=""
            />
          </span>
        </button>
      </div>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;
